# streamlit-dbdg

./: pyproject.toml  tipo_feicao.csv  visual.py
.streamlit/: config.toml
gestao_dbdg/: Início.py  main.py
gestao_dbdg/pages/: 01-wms-catalogos.py  01_WMS_Catálogos.py  02-wms-catalogos-sumario.py  02_WMS_Catálogos-Sumário.py  03_WFS_Catálogos.py  04_WFS_Catálogos-Sumário.py  05_WFS_Catálogos-Tipo-de-Feição.py  06_Atores_Capacitados.py  06_CSW_Catálogos_Sumário.py  07_Representantes.py  08_Atores_na_Inde.py  Atores_Capacitados.py  Atores_na_Inde.py  Histórico_Ator.py  Pendencias_Ator.py  Representantes.py  Representantes_Capacitados.py  Visualizador.py  visualizador.py
gestao_dbdg/src/: inde.py  request.py  util_xml.py  wms_get_capabilities.py  wms_layer.py
gestao_dbdg/src/capabilities/: capabililties_base.py  wfs_get_capabilities.py  wms_get_capabilities.py
gestao_dbdg/src/components/: ows_capabilities.py  wfs_capabilities.py
gestao_dbdg/src/inde_dbdg/: csw_catalogos.py  inde.py
gestao_dbdg/src/layer/: base_layer.py  wfs_layer.py  wms_layer.py
gestao_dbdg/src/requests/: request.py  util_xml.py
gestao_dbdg/src/wfs/: decribe_feature_type.py  wfs_layer.py
gestao_dbdg/src/wms/: wms_layer.py
