[tool.poetry]
name = "gestao-dbdg"
version = "0.1.0"
description = ""
authors = ["RogerioBorba <rogerio.borba17@gmail.com>"]
readme = "README.md"
packages = [{include = "gestao_dbdg"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.1"
certifi = "^2023.7.22"
aiohttp = "^3.8.6"
streamlit = "^1.42.2"
streamlit-extras = "^0.5.5"
streamlit-card = "^1.0.2"
streamlit-folium = "^0.24.0"
duckdb = "^1.2.0"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
